tdf#152045 DOCX export: fix empty display text for content control list items

Regression from commit f726fbc2699b05199a8dec3055710a7131e0aad6
(tdf#151261 DOCX import: fix dropdown SDT when the item display text is
missing, 2022-10-10), the problem was that the correct way to represent
"no display value" is not an attribute with empty value but a missing
attribute.

Change-Id: I25b2bb564444f43d1ca1bf95d1c59b208cb24530
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143048
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>